# ImgExtract

./: Dockerfile  README.md  pyproject.toml  setup.ps1  setup.sh
app/: __init__.py  gradio_app.py  main.py  server.py
inference/: inference.py  load_model.py
test/: calculate_metrics.py  ground_truth.json  validate_model_iou.py  visualize.py
utility/: config.py  model_v2.pth  utils.py
